src/objects/EngagementFrequencySettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Rules for what levels should be awarded for repeated similar actions</description>
    <fields>
        <fullName>Campaign_Record_Type__c</fullName>
        <inlineHelpText>(optional) If set, all campaigns must have this Record Type.</inlineHelpText>
        <label>Campaign Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Sub_Type__c</fullName>
        <inlineHelpText>(optional)  If set, all campaigns must have this sub-type.</inlineHelpText>
        <label>Campaign Sub Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Type__c</fullName>
        <inlineHelpText>(optional) If set, all campaigns must be of this Type.</inlineHelpText>
        <label>Campaign Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Value_1__c</fullName>
        <inlineHelpText>This field is no longer used.</inlineHelpText>
        <label>Field Value 1 - DEPRECATED</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fieldname_1__c</fullName>
        <inlineHelpText>This field is no longer used.</inlineHelpText>
        <label>Campaign Fieldname 1 - DEPRECATED</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_Required__c</fullName>
        <inlineHelpText>(optional) If set, all campaigns must be of this level.</inlineHelpText>
        <label>Level Required</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level_To_Assign__c</fullName>
        <inlineHelpText>(required)  The Engagement Level they are eligible for if all conditions are met.</inlineHelpText>
        <label>Engagement Level</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Actions_Required__c</fullName>
        <inlineHelpText>(required)  The Contact must have this many Campaign Memberships within the usual timeframe to qualify.</inlineHelpText>
        <label>Number of Actions Required</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Groundwire Engage Frequency Settings</label>
</CustomObject>